<resources>
    <string name="app_name">Agendar</string>
    <string name="avancar">Avançar</string>
    <string name="confirmar">Confirmar</string>
    <string name="voltar">Voltar</string>
    <string name="signup">Criar Conta</string>
    <string name="sign_up">CRIAR CONTA</string>
    <string name="agenda">Agenda</string>
    <string name="log_in">CONECTAR</string>
    <string name="terms">Concordo com os termos de uso.</string>
    <string name="password">Senha</string>
    <string name="phone">Celular</string>
    <string name="what_to_do">Olá! O que fazer hoje?</string>
    <string name="go_to_calendar">Marcar um Compromisso</string>
    <string name="example_notes_event">Exemplo: Local aonde irá ocorrer ou detalhes do compromisso</string>
</resources>
