<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="170dp"
            android:layout_height="173dp"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="273dp"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name (Laura)"
            android:textAlignment="center"
            android:textColor="#fff" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="Email (laura@agenda.com)"
            android:textColor="#fff"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/phone"
            android:textColor="#fff" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_marginBottom="20dp"
            android:text="@string/terms" />

        <Button
            android:id="@+id/button5"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/confirmar" />

        <Button
                android:id="@+id/button6"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/voltar"
                android:background="@drawable/rounded_button"
                android:onClick="changeScreen"/>


        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>