<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="213dp"
            android:layout_height="156dp"
            app:srcCompat="@drawable/user" />

        <EditText
            android:id="@+id/nameUser"
            android:layout_width="266dp"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:drawableLeft="@drawable/ic_action_user"
            android:hint="Seu Nome"
            android:textAlignment="center"
            android:textColor="#fff" />

        <EditText
            android:id="@+id/mailUser"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_action_mail"
            android:hint="Seu E-mail"
            android:textAlignment="center"
            android:textColor="#fff" />

        <EditText
            android:id="@+id/passwordUser"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawableLeft="@drawable/ic_action_password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textAlignment="center"
            android:textColor="#fff" />

        <EditText
            android:id="@+id/phoneUser"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_phone"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone"
            android:textAlignment="center"
            android:textColor="#fff" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/terms"
            android:textColor="#fff" />

        <Button
            android:id="@+id/button5"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/confirmar" />

        <Button
            android:id="@+id/button6"
            android:layout_width="250dp"
            android:layout_height="49dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:onClick="backScreen"
            android:text="@string/voltar" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>