<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="111dp"
            android:layout_height="144dp"
            app:srcCompat="@drawable/ic_calendar" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_action_mail"
            android:hint="Email (laura@agenda.com)"
            android:textAlignment="center"
            android:textColor="#fff" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:ems="10"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_action_password"
            android:hint="@string/password"
            android:textAlignment="center"
            android:textColor="#fff" />

        <Button
            android:id="@+id/button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:onClick="changeScreenEvent"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/button2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:onClick="changeScreenLogin"
            android:text="@string/sign_up" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>